--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,10 +7,113 @@
 body {
   font-family: sans-serif;
   overflow: hidden;
+  background-color: rgb(219, 245, 226);
 }
 
 form {
   width: 360px;
+}
+
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-gap :7rem;
+	padding: 0 2rem;
+	justify-content: center;
+}
+
+.content{
+    display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	text-align: center;
+}
+
+.content h2{
+    margin: 15px 0;
+	color: #333;
+	text-transform: uppercase;
+	font-size: 2.9rem;
+}
+
+.content .the-input{
+    position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom: 2px solid #b9b8b8;
+}
+
+.the-input > div{
+    position: relative;
+	height: 45px;
+}
+
+.the-input > div > h5{
+    position: absolute;
+	left: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: rgb(136, 135, 135);
+	font-size: 18px;
+	transition: .3s;
+}
+
+.the-input > div > input{
+    position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
+	outline: none;
+	background: none;
+	padding: 0.5rem 0.7rem;
+	font-size: 1.2rem;
+	color: rgb(48, 45, 45);
+	font-family: sans-serif;
+}
+
+.the-input::before, .the-input::after{
+    content: '';
+	position: absolute;
+	bottom: -2px;
+	width: 0%;
+	height: 2px;
+	background-color: #38d39f;
+	transition: .4s;
+}
+
+.the-input:before{
+    right: 50%;
+}
+
+.the-input::after{
+    left: 50%;
+}
+
+.btn{
+    display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #42be32, #2dac5e, #297e42);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: rgb(22, 22, 22);
+	font-family: sans-serif;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+
+.btn:hover{
+	background-position: right;
 }
 
 /* medidas*/
