--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -213,6 +213,37 @@ form {
   display: none;
 }
 
+/* segunda pagina */
+.panel {
+  font: 16px "Open Sans", Helvetica, Arial, sans-serif;
+  width: 100%;
+  padding: 15%;
+}
+
+.button {
+  display: block;
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  outline: none;
+  border: none;
+  background-image: linear-gradient(to right, #42be32, #2dac5e, #297e42);
+  background-size: 100%;
+  font-size: 1.2rem;
+  color: rgb(22, 22, 22);
+  font-family: sans-serif;
+  text-transform: uppercase;
+  margin: 1rem 0;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 175%;
+}
+
+
 /* medidas*/
 @media screen and (max-width: 1050px) {
   .container {
